# swiggy-rag-system

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  CREATE_GITHUB_REPO.md  Dockerfile  Dockerfile.api  LICENSE  Makefile  NEXT_STEPS.md  OLLAMA_SETUP.md  PROJECT_COMPLETION_VISUAL.txt  PROJECT_STATUS.md  PUBLISH_COMMANDS.sh  QUICK_START.md  README.md  READY_TO_PUBLISH.md  RELEASE_CHECKLIST.md  SECURITY.md  USAGE.md  api_server.py  docker-compose.yml  error_log.txt  fix_linting.py  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run.sh  setup.py  test_before_publish.sh  verify_production_ready.sh
.github/: PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  deploy-api.yml  pages.yml  release.yml
adapters/: __init__.py  cli_adapter.py  faiss_adapter.py  langchain_adapter.py  ollama_adapter.py  pypdf_adapter.py  sentence_transformer_adapter.py
core/: __init__.py  __version__.py  answer_generator.py  config.py  context_retriever.py  document_processor.py  embedding_generator.py  factory.py  models.py  query_handler.py  rag_orchestrator.py  text_chunker.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
ports/: __init__.py  inbound.py  outbound.py
tests/: __init__.py  conftest.py
tests/integration/: test_end_to_end.py
tests/property/: test_properties_adapters.py  test_properties_cli.py  test_properties_document.py  test_properties_embeddings.py  test_properties_query.py  test_properties_vector_store.py
tests/unit/: test_adapters.py  test_answer_generator.py  test_config.py  test_context_retriever.py  test_document_processor.py  test_embedding_generator.py  test_factory.py  test_models.py  test_query_handler.py  test_rag_orchestrator.py  test_text_chunker.py
web/: app.js  index.html  styles.css
